--- a/XMOTION/src/main/resources/fxml/Drawing.fxml
+++ b/XMOTION/src/main/resources/fxml/Drawing.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -13,18 +14,7 @@
          <children>
             <HBox fx:id="tools" prefHeight="35.0" style="-fx-background-color: #aaaaaa;">
                <children>
-                  <Button fx:id="start" mnemonicParsing="false" onAction="#drawFirst" text="Start">
-                     <padding>
-                        <Insets left="2.0" right="2.0" />
-                     </padding>
-                     <HBox.margin>
-                        <Insets right="5.0" />
-                     </HBox.margin></Button>
-                  <Button mnemonicParsing="false" onAction="#backward" prefHeight="30.0" text="StepBack &lt;-">
-                     <HBox.margin>
-                        <Insets right="5.0" />
-                     </HBox.margin></Button>
-                  <Button fx:id="stepF" mnemonicParsing="false" onAction="#forward" prefHeight="30.0" text="Step Foward -&gt;">
+                  <Button fx:id="start" mnemonicParsing="false" onAction="#forward" prefHeight="30.0" text="Step Forward">
                      <padding>
                         <Insets left="2.0" right="2.0" />
                      </padding>
@@ -44,7 +34,10 @@
                   <Button mnemonicParsing="false" onAction="#cycleRunStop" text="Stop  Cycle" />
                </children>
             </HBox>
-            <Pane fx:id="panel" minHeight="-Infinity" minWidth="-Infinity" styleClass="pane" />
+            <Pane fx:id="panel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" styleClass="pane">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Pane>
          </children>
       </VBox>
    </children>
