--- a/XMOTION/src/main/resources/fxml/Drawing.fxml
+++ b/XMOTION/src/main/resources/fxml/Drawing.fxml
@@ -26,7 +26,7 @@
                         <Insets right="5.0" />
                      </HBox.margin>
                   </Button>
-                  <Button mnemonicParsing="false" text="Cycle Back  &lt;&lt;&lt;==">
+                  <Button mnemonicParsing="false" onAction="#cycleBackward" text="Cycle Back  &lt;&lt;&lt;==">
                      <HBox.margin>
                         <Insets right="5.0" />
                      </HBox.margin>
