--- a/XMOTION/src/main/resources/fxml/MainSC.fxml
+++ b/XMOTION/src/main/resources/fxml/MainSC.fxml
@@ -60,7 +60,7 @@
                   <content>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                           
-                           <fx:include fx:id="drawbox" source="Drawing.fxml" />
+                           <fx:include fx:id="drawbox" source="DrawingLimb.fxml" />
                       </AnchorPane>
                   </content>
                 </Tab>
