--- a/XMOTION/src/main/resources/fxml/MainSC.fxml
+++ b/XMOTION/src/main/resources/fxml/MainSC.fxml
@@ -27,7 +27,8 @@
               <menus>
                 <Menu mnemonicParsing="false" text="File">
                   <items>
-                        <MenuItem mnemonicParsing="false" onAction="#openFileOpenDLG" text="Open TextData" />
+                        <MenuItem mnemonicParsing="false" onAction="#openFileOpenDLG" text="Open Text Data File" />
+                        <MenuItem mnemonicParsing="false" onAction="#openDirOpenDLG" text="Open Directory" />
                     <MenuItem mnemonicParsing="false" text="Close" />
                         <SeparatorMenuItem mnemonicParsing="false" />
                         <MenuItem mnemonicParsing="false" onAction="#closeApp" text="Exit" />
@@ -47,7 +48,12 @@
             </MenuBar>
             <TabPane tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
               <tabs>
-                <Tab text="File Content">
+                  <Tab fx:id="dirTab" text="Directory Content">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    </content>
+                  </Tab>
+                <Tab fx:id="fileTab" text="File Content">
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
@@ -56,7 +62,7 @@
                         </AnchorPane>
                   </content>
                 </Tab>
-                <Tab text="Drawing">
+                <Tab fx:id="DrawTab" text="Drawing">
                   <content>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <fx:include fx:id="drawbox" source="DrawingLimb.fxml" />
