--- a/XMOTION/src/main/resources/fxml/DrawingLimb.fxml
+++ b/XMOTION/src/main/resources/fxml/DrawingLimb.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="700.0" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pns.VidController.DrawingLimbController">
+<AnchorPane id="AnchorPane" prefHeight="900.0" prefWidth="900.0" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pns.VidController.DrawingLimbController">
    <children>
       <VBox fx:id="spt" layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="100.0" styleClass="pane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -37,12 +37,22 @@
                      </HBox.margin>
                   </Button>
                   <Button fx:id="stopCycle" mnemonicParsing="false" onAction="#cycleRunFowardStop" text="Stop  Cycle" />
+                  <Button mnemonicParsing="false" onAction="#drawMan" text="Draw Man" />
                </children>
+               <VBox.margin>
+                  <Insets bottom="5.0" />
+               </VBox.margin>
             </HBox>
-            <Pane fx:id="panel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" styleClass="pane">
+            <Pane fx:id="panel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" styleClass="pane" VBox.vgrow="ALWAYS">
                <cursor>
                   <Cursor fx:constant="HAND" />
-               </cursor></Pane>
+               </cursor>
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="15.0" />
+               </VBox.margin>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding></Pane>
          </children>
       </VBox>
    </children>
