--- a/XMOTION/src/main/resources/fxml/DrawingLimb.fxml
+++ b/XMOTION/src/main/resources/fxml/DrawingLimb.fxml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="900.0" prefWidth="900.0" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pns.VidController.DrawingLimbController">
-   <children>
-      <VBox fx:id="spt" layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="100.0" styleClass="pane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <HBox fx:id="tools" prefHeight="35.0" style="-fx-background-color: #aaaaaa;">
+<BorderPane id="AnchorPane" prefHeight="900.0" prefWidth="900.0" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pns.VidController.DrawingLimbController">
+         <top>
+            <HBox fx:id="tools" prefHeight="35.0" style="-fx-background-color: #aaaaaa;" BorderPane.alignment="CENTER">
                <children>
                   <Button fx:id="goNext" mnemonicParsing="false" onAction="#forward" prefHeight="30.0" text="Step Forward">
                      <padding>
@@ -37,23 +37,76 @@
                      </HBox.margin>
                   </Button>
                   <Button fx:id="stopCycle" mnemonicParsing="false" onAction="#cycleRunFowardStop" text="Stop  Cycle" />
-                  <Button mnemonicParsing="false" onAction="#drawMan" text="Draw Man" />
                </children>
-               <VBox.margin>
-                  <Insets bottom="5.0" />
-               </VBox.margin>
             </HBox>
-            <Pane fx:id="panel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" styleClass="pane" VBox.vgrow="ALWAYS">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-               <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="15.0" />
-               </VBox.margin>
+         </top>
+         <center>
+            <VBox fx:id="spt" prefHeight="200.0" prefWidth="100.0" styleClass="pane" BorderPane.alignment="CENTER">
+               <children>
+            <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
+              <tabs>
+                  <Tab text="Man">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                                    <Pane fx:id="panelMan" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" styleClass="pane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                       <padding>
+                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                       </padding>
+                                    </Pane>
+                           </children>
+                        </AnchorPane>
+                    </content>
+                  </Tab>
+                  <Tab text="Head">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <Pane fx:id="panelHead" prefHeight="200.0" prefWidth="200.0" />
+                           </children>
+                        </AnchorPane>
+                    </content>
+                  </Tab>
+                  <Tab text="Body">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <Pane fx:id="panelBody" prefHeight="200.0" prefWidth="200.0" />
+                           </children>
+                        </AnchorPane>
+                    </content>
+                  </Tab>
+                <Tab text="Hands">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <BorderPane prefHeight="200.0" prefWidth="200.0">
+                                 <center>
+                                    <Pane fx:id="panelHands" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+                                 </center>
+                              </BorderPane>
+                           </children>
+                        </AnchorPane>
+                  </content>
+                </Tab>
+                <Tab text="Legs">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <Pane fx:id="panelLegs" prefHeight="200.0" prefWidth="200.0" />
+                           </children>
+                        </AnchorPane>
+                  </content>
+                </Tab>
+              </tabs>
                <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+               <VBox.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding></Pane>
-         </children>
-      </VBox>
-   </children>
-</AnchorPane>
+               </VBox.margin>
+            </TabPane>
+               </children>
+            </VBox>
+         </center>
+      </BorderPane>
