--- a/XMOTION/src/main/resources/fxml/DrawWindow.fxml
+++ b/XMOTION/src/main/resources/fxml/DrawWindow.fxml
@@ -2,6 +2,7 @@
 
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SeparatorMenuItem?>
@@ -20,7 +21,7 @@
    <children>
       <BorderPane fx:id="borderPanel" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
-            <Pane fx:id="supportPanel" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #0;" BorderPane.alignment="CENTER" />
+            <Pane fx:id="supportPanel" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #fffff0;" BorderPane.alignment="CENTER" />
          </center>
          <top>
             <HBox fx:id="tooltop" style="-fx-background-color: #bbbbbb;" BorderPane.alignment="CENTER">
@@ -39,7 +40,19 @@
             </HBox>
          </top>
          <bottom>
-            <HBox fx:id="toolbottom" prefHeight="20.0" style="-fx-background-color: #bbbbbb;" BorderPane.alignment="CENTER" />
+            <HBox fx:id="toolbottom" style="-fx-background-color: #bbbbbb;" BorderPane.alignment="CENTER">
+               <children>
+                  <Button minWidth="24.0" mnemonicParsing="false" onAction="#backward" text="&lt;">
+                     <HBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#forward" text="&gt;">
+                     <HBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </HBox.margin>
+                  </Button>
+               </children></HBox>
          </bottom>
       </BorderPane>
    </children>
