--- a/XMOTION/src/main/resources/fxml/DrawWindow.fxml
+++ b/XMOTION/src/main/resources/fxml/DrawWindow.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane id="AnchorPane" fx:id="mainPanel" maxHeight="2000.0" maxWidth="2000.0" minHeight="500.0" minWidth="500.0" prefHeight="500.0" prefWidth="500.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pns.VidController.DrawingLimbController">
+<AnchorPane id="AnchorPane" fx:id="mainPanel" maxHeight="2000.0" maxWidth="2000.0" minHeight="500.0" minWidth="500.0" onMouseEntered="#recieveData" prefHeight="500.0" prefWidth="500.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pns.VidController.DrawingLimbController">
     <stylesheets>
         <URL value="@/styles/drawwindow.css" />
     </stylesheets>
