--- a/XMOTION/src/main/resources/fxml/DrawWindow.fxml
+++ b/XMOTION/src/main/resources/fxml/DrawWindow.fxml
@@ -44,7 +44,7 @@
                         <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="endBTN" mnemonicParsing="false" onAction="#toEnd" text="&gt;|">
+                  <Button fx:id="stepBTN" mnemonicParsing="false" onAction="#toEnd" text="&gt;||">
                      <HBox.margin>
                         <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                      </HBox.margin>
